Move starter-provided Application class into sample application's package
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 /.apt_generated_tests/
 /target/
 
+/.odo/
 .odo\env
 .odo\odo-file-index.json
 
 .vscode/
-
-c:\ydosppa\application-stack-samples\simple-jaxrs\.odo\env
