--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.odo.java-openliberty.samples</groupId>
-    <artifactId>simple-jaxrs</artifactId>
+    <artifactId>intro</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
