--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-/.apt_generated/
-/.apt_generated_tests/
-/target/
+target/
 
-/.odo/
-.odo\env
-.odo\odo-file-index.json
-
+.odo/
 .vscode/
+
+.odo/env
