stack URL as parent, no direct outer loop metadata
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,17 +1,22 @@
 schemaVersion: 2.0.0
 metadata:
   name: java-openliberty
-  version: 0.3.1
-  description: app stack using Open Liberty runtime
-  alpha.build-dockerfile: "https://raw.githubusercontent.com/OpenLiberty/application-stack/master/outer-loop/0.3/Dockerfile"
-  alpha.deployment-manifest: "https://raw.githubusercontent.com/OpenLiberty/application-stack/master/outer-loop/0.3/app-deploy.yaml"
-components:
-  - name: devruntime
-    container:
-      endpoints:
-        - exposure: public
-          path: /
-          name: ep1
-          targetPort: 9080
-          protocol: http
+  version: 0.3.0
+  description: Java application stack using Open Liberty runtime and Java Version 8
+parent:
+  uri: https://raw.githubusercontent.com/OpenLiberty/application-stack/master/dev/devfile.yaml
+  components:
+     - container:
+         name: devruntime
+         # this custom image source can be found at:
+         # https://github.com/OpenLiberty/application-stack/tree/master/stackimage
+         image: uberskigeek/java-openliberty-java8-odo:0.1.1
+         memoryLimit: 1512Mi
+         mountSources: true
+         endpoints:
+          - exposure: public
+            path: /
+            name: ep1
+            targetPort: 9080
+            protocol: http
   
