--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.odo/
 .odo\env
 .odo\odo-file-index.json
+.odo/env
+.odo/odo-file-index.json
 
 .vscode/
 
@@ -12,4 +14,3 @@
 .factorypath
 .project
 .settings/
-
