Add RestAssured test
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>1.7.29</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}</finalName>
