--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 group = 'dev.odo.java-openliberty.samples'
-description = 'OpenLiberty Application Stack intro built with Gradle'
+description = 'OpenLiberty devfile stack intro built with Gradle'
 
 repositories {
     mavenCentral()
@@ -33,7 +33,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     testImplementation 'io.rest-assured:rest-assured:4.2.0'
     testImplementation 'org.apache.cxf:cxf-rt-rs-client:3.3.6'
-    testImplementation 'org.slf4j:slf4j-log4j12:1.7.31'
+    testImplementation 'org.slf4j:slf4j-jdk14:1.7.32'
 }
 
 buildscript {
