--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,4 +1,30 @@
 commands:
+- id: build-image
+  apply:
+      component: outerloop-build
+- id: deployk8s-good
+  apply:
+      component: outerloop-deploy-good
+- id: deployk8s-bad
+  apply:
+      component: outerloop-deploy-bad
+- id: deploy-good
+  composite:
+      commands:
+        - build-image
+        - deployk8s-good
+      group:
+        kind: deploy
+        isDefault: true
+
+        #- id: deploy-bad
+        #  composite:
+        #      commands:
+        # - build-image
+        #- deployk8s-bad
+        #      group:
+        #        kind: deploy
+        #        isDefault: false
 - exec:
     commandLine: mvn -DinstallDirectory=/opt/ol/wlp -Ddebug=false -DhotTests=true
       -DcompileWait=3 io.openliberty.tools:liberty-maven-plugin:3.5.1:dev
@@ -38,6 +64,66 @@ commands:
     workingDir: /projects
   id: test
 components:
+- name: outerloop-build
+  image:
+      imageName: "{{CONTAINER_IMAGE}}"
+      dockerfile:
+          #uri: ./Dockerfile
+        uri: ./Dockerfile.1stage
+        buildContext: ${PROJECTS_ROOT}
+- name: outerloop-deploy-good
+  kubernetes:
+      inlined: |
+        apiVersion: apps.openliberty.io/v1beta2
+        kind: OpenLibertyApplication
+        metadata:
+           name: intro-devfile-outer-loop
+        spec:
+         # Add fields here
+         applicationVersion: 1.0.0
+         applicationImage: {{CONTAINER_IMAGE}}
+         service:
+           type: ClusterIP
+           port: 9080
+           annotations:
+             prometheus.io/scrape: 'true'
+         probes:
+          readiness:
+           failureThreshold: 12
+           httpGet:
+             path: /health/ready
+             port: 9080
+           initialDelaySeconds: 5
+           periodSeconds: 2
+           timeoutSeconds: 1
+          liveness:
+           failureThreshold: 12
+           httpGet:
+             path: /health/live
+             port: 9080
+           initialDelaySeconds: 5
+           periodSeconds: 2
+         expose: true
+- name: outerloop-deploy-bad
+  kubernetes:
+      inlined: |
+        kind: Deployment
+        apiVersion: apps/v1
+        metadata:
+          name: my-component
+        spec:
+          replicas: 1
+          selector:
+            matchLabels:
+              app: node-app
+          template:
+            metadata:
+              labels:
+                app: node-app
+            spec:
+              containers:
+                - name: main
+                  image: "{{CONTAINER_IMAGE}}"
 - container:
     endpoints:
     - exposure: public
@@ -63,13 +149,14 @@ metadata:
   tags:
   - Java
   - Maven
-  version: 0.8.0
-schemaVersion: 2.1.0
+  version: 0.8.1
+schemaVersion: 2.2.0
 starterProjects:
 - git:
     remotes:
       origin: https://github.com/OpenLiberty/devfile-stack-starters.git
   name: rest
 variables:
+  CONTAINER_IMAGE: docker.io/scottkurz/asi-outer-loop:stg1b
   liberty-plugin-version: 3.5.1
   liberty-version: 21.0.0.12
